--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.8",
     "ogl": "^1.0.11",
+    "posthog-js": "^1.304.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0"
