--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.2",
     "next": "16.0.8",
+    "next-cloudinary": "^6.17.5",
     "ogl": "^1.0.11",
     "posthog-js": "^1.304.0",
     "react": "19.2.1",
